--- a/Git_Kalindar/MainWindow.xaml
+++ b/Git_Kalindar/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Image Source="/post-85684-1403338748.jpg" Stretch="Fill"/>
     </Grid>
 </Window>
