--- a/Git_Kalindar/MainWindow.xaml
+++ b/Git_Kalindar/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        
+        <Calendar Margin="310,134,310,134"></Calendar>
     </Grid>
 </Window>
