--- a/Git_Kalindar/MainWindow.xaml
+++ b/Git_Kalindar/MainWindow.xaml
@@ -8,5 +8,6 @@
         Title="MainWindow" Height="450" Width="800">
     <Grid>
         <Calendar Margin="310,134,310,134"></Calendar>
+        <Button Content="Button" HorizontalAlignment="Center" Margin="0,305,0,0" VerticalAlignment="Top" Height="50" Width="180"/>
     </Grid>
 </Window>
